--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,5 +6,5 @@
 - degree: B.Tech
   uni: Jawaharlal Nehru Technological University Hyderabad
   year: 2016 - 2024
-  award: Godl Medal and Enrollement in Honors Board
-  summary: Because I stood as topper of my batch in my college I was awarded a gold medal and I am enrolled in Honors Board
+  award: Gold Medal and Enrollment in Honors Board
+  summary: Because I stood as topper of my batch in my college I was awarded a Gold medal and I am enrolled in Honors Board.
