--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 # Degree
 - degree: Master of Science in Computer Science
   uni: Wright State University
-  year: 2023 &mdash; 2024
+  year: January, 2023 &mdash; December, 2024
 
 - degree: B.Tech
   uni: Jawaharlal Nehru Technological University Hyderabad
-  year: 2016 - 2024
+  year: August 2016 - December 2020
   award: Gold Medal and Enrollment in Honors Board
   summary: Because I stood as topper of my batch in my college I was awarded a Gold medal and I am enrolled in Honors Board.
