--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,15 @@
 # Skills
+
+# Soft Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+- skill: Quick Learner, Hard Working, Self Motivated and Critical Thinking
 
-# Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
-
-# Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+# Technical Skills
+Programming: Python, C, JAVA, C++
+Frameworks: Angular 7 and higher, CSS, CSS3, Boot Strap with Responsive Design, Angular Material, Kendo UI for angular, Dev Extreme UI for Angular, Microsoft .Net Framework, Microsoft .Net Core, Linq to Sql, Entity Framework
+Markup Languages: HTML, HTML5
+Scripting: JavaScript, TypeScript, jQuery library
+Databases: MySQL, Microsoft SQL Server
+Testing: Postman, Swagger to test .Net Api
+Others: PowerShell, Microsoft Office Suite, GitHub, Trello, Jira, Scikit Learn, Open CV, NumPy, Matplotlib, Pandas, Developer Tools in Web browsers, PyTorch, Git Version Control, Microsoft Azure Version Control.
+IDE: VS Code, Visual Studio, Microsoft SSMS, Python IDLE etc.
