One More Change

--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,8 +1,7 @@
 # Skills
 
 # Soft Skills
-# Organizational leadership
-- skill: Quick Learner, Hard Working, Self Motivated and Critical Thinking
+skill: Quick Learner, Hard Working, Self Motivated and Critical Thinking
 
 # Technical Skills
 Programming: Python, C, JAVA, C++
