--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,14 +1,14 @@
 # Skills
 
 # Soft Skills
-skill: Quick Learner, Hard Working, Self Motivated and Critical Thinking
+- skill: Quick Learner, Hard Working, Self Motivated and Critical Thinking
 
 # Technical Skills
-Programming: Python, C, JAVA, C++
-Frameworks: Angular 7 and higher, CSS, CSS3, Boot Strap with Responsive Design, Angular Material, Kendo UI for angular, Dev Extreme UI for Angular, Microsoft .Net Framework, Microsoft .Net Core, Linq to Sql, Entity Framework
-Markup Languages: HTML, HTML5
-Scripting: JavaScript, TypeScript, jQuery library
-Databases: MySQL, Microsoft SQL Server
-Testing: Postman, Swagger to test .Net Api
-Others: PowerShell, Microsoft Office Suite, GitHub, Trello, Jira, Scikit Learn, Open CV, NumPy, Matplotlib, Pandas, Developer Tools in Web browsers, PyTorch, Git Version Control, Microsoft Azure Version Control.
-IDE: VS Code, Visual Studio, Microsoft SSMS, Python IDLE etc.
+- Programming:  C, C++, C#, JAVA, Python
+- Frameworks: Angular 7 and higher, CSS, CSS3, Boot Strap with Responsive Design, Angular Material, Kendo UI for angular, Dev Extreme UI for Angular, Microsoft .Net Framework, Microsoft .Net Core, Linq to Sql, Entity Framework
+- Markup Languages: HTML, HTML5
+- Scripting: JavaScript, TypeScript, jQuery library
+- Databases: MySQL, Microsoft SQL Server
+- Testing: Postman, Swagger to test .Net Api
+- IDE: VS Code, Visual Studio, Microsoft SSMS, Python IDLE etc.
+- Others: PowerShell, Microsoft Office Suite, GitHub, Trello, Jira, Scikit Learn, Open CV, NumPy, Matplotlib, Pandas, Developer Tools in Web browsers, PyTorch, Git Version Control, Microsoft Azure Version Control.
