--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ resume_section_education:       true
 resume_section_projects:        true
 resume_section_skills:          true
 resume_section_certifications:  true
-resume_section_recognition:     true
+resume_section_recognition:     false
 resume_section_links:           false
 resume_section_associations:    false
 resume_section_interests:       false
@@ -47,7 +47,7 @@ resume_section_interests:       false
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
   resume_linkedin_url:          "https://www.linkedin.com/in/neelam-v-193150173"
-  resume_website_url:           "https://vamsikrishnaneelamwright.github.io/latest_resume/"
+  # resume_website_url:           "https://vamsikrishnaneelamwright.github.io/latest_resume/"
   # resume_github_url:            "https://github.com/jglovier/resume-template"
   # resume_twitter_url:           "http://twitter.com/jglovier"
   # resume_dribbble_url:          "https://dribbble.com/jag"
