--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,10 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: Gold Medal in B.Tech
+  organization: Jawaharlal Nehru Technological University Hyderabad
+  year: 2016 - 2020
+  summary: Awarded the Gold Medal for Outstanding Performance in my B.Tech.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: Honors Board
+  organization: Jawaharlal Nehru Technological University Hyderabad
+  year: 2020
+  summary: Enrolled in Honors Borad for top performance and execllence in my acadamics in B.Tech
