--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -4,11 +4,11 @@
 - skill: Quick Learner, Hard Working, Self Motivated and Critical Thinking
 
 # Technical Skills
-- Programming:  C, C++, C#, JAVA, Python
-- Frameworks: Angular 7 and higher, CSS, CSS3, Boot Strap with Responsive Design, Angular Material, Kendo UI for angular, Dev Extreme UI for Angular, Microsoft .Net Framework, Microsoft .Net Core, Linq to Sql, Entity Framework
-- Markup Languages: HTML, HTML5
-- Scripting: JavaScript, TypeScript, jQuery library
-- Databases: MySQL, Microsoft SQL Server
-- Testing: Postman, Swagger to test .Net Api
-- IDE: VS Code, Visual Studio, Microsoft SSMS, Python IDLE etc.
-- Others: PowerShell, Microsoft Office Suite, GitHub, Trello, Jira, Scikit Learn, Open CV, NumPy, Matplotlib, Pandas, Developer Tools in Web browsers, PyTorch, Git Version Control, Microsoft Azure Version Control.
+- skill: Programming:  C, C++, C#, JAVA, Python
+- skill: Frameworks: Angular 7 and higher, CSS, CSS3, Boot Strap with Responsive Design, Angular Material, Kendo UI for angular, Dev Extreme UI for Angular, Microsoft .Net Framework, Microsoft .Net Core, Linq to Sql, Entity Framework
+- skill: Markup Languages: HTML, HTML5
+- skill: Scripting: JavaScript, TypeScript, jQuery library
+- skill: Databases: MySQL, Microsoft SQL Server
+- skill: Testing: Postman, Swagger to test .Net Api
+- skill: IDE: VS Code, Visual Studio, Microsoft SSMS, Python IDLE etc.
+- skill: Others: PowerShell, Microsoft Office Suite, GitHub, Trello, Jira, Scikit Learn, Open CV, NumPy, Matplotlib, Pandas, Developer Tools in Web browsers, PyTorch, Git Version Control, Microsoft Azure Version Control.
