--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -7,4 +7,4 @@
 - award: Honors Board
   organization: Jawaharlal Nehru Technological University Hyderabad
   year: 2020
-  summary: Enrolled in Honors Borad for top performance and execllence in my acadamics in B.Tech
+  summary: Enrolled in Honors Borad for top performance and execllence in my academics in B.Tech
