Updated Profile Image

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Master of Science in Computer Science
-  uni: Wright State University
+  uni: Wright State University Dayton
   year: January, 2023 &mdash; December, 2024
 
 - degree: B.Tech
